--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
     "styled-jsx": "^3.3.0"
   },
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "connected-react-router": "^6.8.0",
+    "history": "^4.10.1",
+    "react": ">=15",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
